gccida/c2/loop_iterations
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4048:4: error: expected ';' after expression
rtx v65; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4048:5: error: use of undeclared identifier 'v65'
rtx v65; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4060:4: error: expected ';' after expression
rtx v77; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4060:5: error: use of undeclared identifier 'v77'
rtx v77; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4061:4: error: expected ';' after expression
rtx v78; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4061:5: error: use of undeclared identifier 'v78'
rtx v78; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4062:4: error: expected ';' after expression
rtx v79; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4062:5: error: use of undeclared identifier 'v79'
rtx v79; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4064:4: error: expected ';' after expression
rtx v81; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4064:5: error: use of undeclared identifier 'v81'
rtx v81; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4072:4: error: expected ';' after expression
rtx v89; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4072:5: error: use of undeclared identifier 'v89'
rtx v89; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4074:4: error: expected ';' after expression
rtx v91; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4074:5: error: use of undeclared identifier 'v91'
rtx v91; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4090:4: error: expected ';' after expression
rtx v107; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4090:5: error: use of undeclared identifier 'v107'
rtx v107; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4094:4: error: expected ';' after expression
rtx reg; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4094:5: error: use of undeclared identifier 'reg'
rtx reg; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/unroll.c:4095:4: error: expected ';' after expression
rtx rega; // [rsp+8h] [rbp-70h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/loop_iterations/src/obj/unroll.o] Error 1
